# fruit-multiclass-detection

./: .pre-commit-config.yaml  1  AGENTS.md  CODEOWNERS  README.md  mnist_training_metrics.json  pyproject.toml
.github/workflows/: lint.yml
src/common/: MLP.py  MLPexample.py  MNIST.py  Module.py  autograd.py  main.py
src/tests/: com_diff_test.py  differential_test.py  main.py
