[project]
name = "fruit-multiclass-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "clay-arras",email = "astrollin.neil@gmail.com"},
    {name = "rowan-cake",email = "cakerowan@gmail.com"},
    {name = "markus-chu",email = "markuschu06@gmail.com"},
    {name = "kevin-li",email = "kevin.shangkun.li@gmail.com"},
    {name = "simo-becarevic",email = "becarevic.simo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.11.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pytest = "^9.0.1"
torch = "^2.9.1"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
